[package]
name = "pmetal-trainer"
description = "Training loops and optimization for PMetal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["ane", "hub"]
tensorboard = ["dep:tensorboard-rs"]
ane = ["pmetal-metal/ane", "pmetal-core/ane"]
hub = ["dep:pmetal-hub"]
distributed = ["dep:pmetal-distributed"]
experimental-trainers = []

[dependencies]
pmetal-core = { workspace = true }
pmetal-mlx = { workspace = true }
pmetal-lora = { workspace = true }
pmetal-data = { workspace = true }
pmetal-models = { workspace = true }
pmetal-distill = { workspace = true }
pmetal-metal = { workspace = true }
pmetal-distributed = { workspace = true, optional = true }
pmetal-hub = { workspace = true, optional = true }
mlx-rs = { workspace = true }
mlx-sys = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
indicatif = { workspace = true }
tokio = { workspace = true }
chrono = "0.4"
dirs = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
image = "0.25"

# Optional: TensorBoard logging
tensorboard-rs = { version = "0.5", optional = true }

[dev-dependencies]
serial_test = "3.2.0"
tempfile = { workspace = true }

[lints]
workspace = true
