[package]
name = "pmetal"
description = "High-performance LLM fine-tuning framework for Apple Silicon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "pmetal"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli", "dashboard", "trainer", "lora", "merge", "ane"]

# Foundation crates (no mlx-rs dependency)
core = ["dep:pmetal-core"]
gguf = ["dep:pmetal-gguf", "core"]
metal = ["dep:pmetal-metal", "core"]
hub = ["dep:pmetal-hub", "core"]
distributed = ["dep:pmetal-distributed", "pmetal-trainer?/distributed"]
mhc = ["dep:pmetal-mhc", "core", "metal"]

# MLX-dependent crates
mlx = ["dep:pmetal-mlx", "core", "metal"]
models = ["dep:pmetal-models", "dep:pmetal-bridge", "core", "gguf", "metal", "mlx"]
# Native-only: uses pmetal-bridge exclusively, NO mlx-rs/mlx-sys (single libmlx.a)
native-only = ["dep:pmetal-bridge", "core", "metal"]
lora = ["dep:pmetal-lora", "core", "gguf", "metal", "mlx", "models"]
# Opt-in: enables fused Metal kernels for ~2x LoRA training speedup (requires Float16 inputs)
lora-metal-fused = ["lora", "pmetal-lora/metal-fused"]
data = ["dep:pmetal-data", "core", "mlx"]
trainer = ["dep:pmetal-trainer", "core", "mlx", "metal", "lora", "models", "data", "distill"]
distill = ["dep:pmetal-distill", "core", "mlx", "metal"]
merge = ["dep:pmetal-merge", "core", "mlx"]
vocoder = ["dep:pmetal-vocoder", "core", "mlx"]

# ANE: Apple Neural Engine direct programming
ane = ["metal", "pmetal-metal/ane", "pmetal-core/ane", "pmetal-trainer?/ane", "pmetal-models?/ane"]

# Everything (sub-crate deps only, no CLI-only deps)
full = [
    "core", "gguf", "metal", "hub", "distributed", "mhc",
    "mlx", "models", "lora", "data", "trainer",
    "distill", "merge", "vocoder", "ane",
]

# CLI: adds the pmetal binary + all CLI-specific dependencies
cli = [
    "core", "gguf", "metal", "hub", "mlx", "models", "data",
    "dep:clap", "dep:tokio", "dep:tracing-subscriber",
    "dep:serde", "dep:serde_yaml", "dep:indicatif", "dep:anyhow",
    "dep:safetensors", "dep:dirs", "dep:chrono",
    "dep:parquet", "dep:arrow-array", "dep:arrow-json",
    "dep:rand", "dep:regex", "dep:tempfile", "dep:tokenizers",
    "dep:walkdir", "dep:flate2", "dep:libc", "dep:reqwest", "dep:sha2",
]

# Dashboard: TUI (adds ratatui/crossterm on top of cli)
dashboard = ["cli", "dep:ratatui", "dep:crossterm", "dep:futures", "dep:tokio-util"]

# Serve: HTTP inference server
serve = ["cli", "dep:pmetal-serve"]

# MCP: Model Context Protocol server for Claude Desktop
mcp = ["cli", "dep:pmetal-mcp"]

[dependencies]
# Sub-crates (all optional — activated by feature flags above)
pmetal-core = { workspace = true, optional = true }
pmetal-gguf = { workspace = true, optional = true }
pmetal-metal = { workspace = true, optional = true }
pmetal-hub = { workspace = true, optional = true }
pmetal-distributed = { workspace = true, optional = true }
pmetal-mhc = { workspace = true, optional = true }
pmetal-mlx = { workspace = true, optional = true }
pmetal-models = { workspace = true, optional = true }
pmetal-bridge = { workspace = true, optional = true }
pmetal-lora = { workspace = true, optional = true }
pmetal-data = { workspace = true, optional = true }
pmetal-trainer = { workspace = true, optional = true }
pmetal-distill = { workspace = true, optional = true }
pmetal-merge = { workspace = true, optional = true }
pmetal-vocoder = { workspace = true, optional = true }
pmetal-serve = { workspace = true, optional = true }
pmetal-mcp = { workspace = true, optional = true }

# Always-on (SDK facade needs these)
serde_json = { workspace = true }
tracing = { workspace = true }
half = { workspace = true }

# CLI dependencies (optional, behind "cli" feature)
clap = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
safetensors = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
chrono = { version = "0.4", optional = true }
parquet = { workspace = true, features = ["arrow"], optional = true }
arrow-array = { workspace = true, optional = true }
arrow-json = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
regex = { version = "1", optional = true }
tempfile = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }
flate2 = { version = "1", optional = true }
libc = { version = "0.2", optional = true }
reqwest = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

# Dashboard dependencies (optional, behind "dashboard" feature)
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", features = ["event-stream"], optional = true }
futures = { version = "0.3", optional = true }
tokio-util = { version = "0.7", features = ["rt"], optional = true }

[build-dependencies]
flate2 = "1"

[dev-dependencies]
tracing-subscriber = { workspace = true }

[[example]]
name = "device_info"
path = "examples/device_info.rs"

[[example]]
name = "inference"
path = "examples/inference.rs"
required-features = ["hub", "data", "models"]

[[example]]
name = "inference_ane"
path = "examples/inference_ane.rs"
required-features = ["hub", "data", "models", "ane"]

[[example]]
name = "finetune_manual"
path = "examples/finetune_manual.rs"
required-features = ["data", "lora", "trainer"]

[[example]]
name = "finetune_ane"
path = "examples/finetune_ane.rs"
required-features = ["trainer", "ane"]

[lints]
workspace = true
