[package]
name = "pmetal-gui"
version = "0.3.6"
description = "PMetal - Apple Silicon ML Training Suite"
edition = "2021"

[lib]
name = "pmetal_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.10", features = [] }
tauri-plugin-opener = "2.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dirs = "6"
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
pmetal = { path = "../../pmetal", features = ["full"] }
mlx-rs = { version = "0.25.7", package = "pmetal-mlx-rs", features = ["safetensors"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
