[package]
name = "pmetal-gui"
version = "0.3.13"
description = "PMetal - Apple Silicon ML Training Suite"
edition = "2021"

[lib]
name = "pmetal_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.10", features = [] }
tauri-plugin-opener = "2.5"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
# tauri-plugin-updater = "2"  # TODO: re-enable once signing key is configured in CI
tauri-plugin-process = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dirs = "6"
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
pmetal = { path = "../../pmetal", features = ["full"] }
# TODO: migrate direct mlx-rs usage to pmetal re-exports, then remove this dep
mlx-rs = { version = "0.25.8", package = "pmetal-mlx-rs", features = ["safetensors"] }

# Optimize all dependencies in dev builds — training/tokenization is CPU-bound
# and ~10x slower without optimizations. The GUI's own code stays at opt-level 1
# for fast recompilation.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
